--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.bmi" >
+    package="com.example.bmi">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,6 +14,21 @@
         android:theme="@style/Theme.BMI"
         tools:targetApi="n">
         <activity
+            android:name=".huilv2"
+            android:exported="true" />
+        <activity
+            android:name=".Listactivity2"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MyListActivity"
+            android:exported="true"></activity>
+        <activity
             android:name=".huilv"
             android:exported="true" />
         <activity
@@ -20,14 +36,7 @@
             android:exported="true" />
         <activity
             android:name=".Huansuan"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:exported="true"></activity>
     </application>
 
 </manifest>
